[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latency-agent"
version = "0.1.0"
description = "Toy matching-engine simulator + RL-style agent for tail-latency stabilization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Amaya Joshi"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "matplotlib>=3.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
